issues fixed : Text is getting Truncated in Your tests tab and the test frame and Identifier "G" of the FIB question Answer choice field text box is in-appropriate - FF specific

--- a/WebContent/styles/new-ui.css
+++ b/WebContent/styles/new-ui.css
@@ -498,6 +498,7 @@ span.glyphicon.glyphicon-info-sign {
   overflow: hidden;
   text-overflow: ellipsis;
   height:15px;
+  margin-top: -1px;
 }
 .testCaptionLabel {
   white-space: nowrap;
